Improved scrolling in monthly view

--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -438,7 +438,7 @@
         <!--Calendar Container-->
         <scene sceneID="uPg-6R-gjb">
             <objects>
-                <viewController id="DML-yC-EYD" customClass="CalendarContainer" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Calendar" id="DML-yC-EYD" customClass="CalendarContainer" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fZU-Sr-zJ4"/>
                         <viewControllerLayoutGuide type="bottom" id="nBQ-JA-8us"/>
@@ -447,46 +447,6 @@
                         <rect key="frame" x="0.0" y="64" width="500" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aep-g5-xL8">
-                                <rect key="frame" x="55" y="100" width="374" height="272"/>
-                                <color key="backgroundColor" red="1" green="0.91372549020000005" blue="0.82352941180000006" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" identifier="calendar-width" id="pZo-Ac-LE7"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="3DK-bT-FoA">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="5"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarTextCell" id="FLb-kZ-gkE" customClass="CalendarViewTextCell" customModule="ponomar" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="5" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="lcW-kq-nqu">
-                                                    <rect key="frame" x="9" y="13" width="29" height="27"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="lcW-kq-nqu" secondAttribute="trailing" constant="5" id="0Jt-sQ-dmD"/>
-                                            <constraint firstItem="lcW-kq-nqu" firstAttribute="leading" secondItem="FLb-kZ-gkE" secondAttribute="leading" constant="5" id="3R9-Dj-vYN"/>
-                                            <constraint firstAttribute="bottom" secondItem="lcW-kq-nqu" secondAttribute="bottom" constant="5" id="FoZ-6K-4pl"/>
-                                            <constraint firstItem="lcW-kq-nqu" firstAttribute="top" secondItem="FLb-kZ-gkE" secondAttribute="top" constant="5" id="VT8-ys-neX"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="dateLabel" destination="lcW-kq-nqu" id="oCu-nc-FLg"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sun" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lp9-ps-iE1">
                                 <rect key="frame" x="45" y="29" width="30" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -529,40 +489,52 @@
                                 <color key="textColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aep-g5-xL8">
+                                <rect key="frame" x="100" y="68" width="300" height="300"/>
+                                <color key="backgroundColor" red="1" green="0.91372549020000005" blue="0.82352941180000006" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" identifier="calendar-height" id="LnL-eI-O2k"/>
+                                    <constraint firstAttribute="width" constant="500" identifier="calendar-width" id="pZo-Ac-LE7"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="3DK-bT-FoA">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="5"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="FLb-kZ-gkE" customClass="CalendarViewTextCell" customModule="ponomar" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="5" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.91372549020000005" blue="0.82352941180000006" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="lp9-ps-iE1" secondAttribute="centerX" multiplier="14:1" id="0ug-bK-pzV"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="ooq-gN-fTf" secondAttribute="bottom" id="7fk-mu-mUg"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="ooq-gN-fTf" secondAttribute="bottom" constant="10" id="7fk-mu-mUg"/>
                             <constraint firstAttribute="trailing" secondItem="sKT-Hg-rA6" secondAttribute="centerX" multiplier="14:11" id="7lR-HO-7VM"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="1QZ-hP-w3l" secondAttribute="bottom" id="FUw-IJ-uRM"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="1QZ-hP-w3l" secondAttribute="bottom" constant="10" id="FUw-IJ-uRM"/>
                             <constraint firstItem="aep-g5-xL8" firstAttribute="centerX" secondItem="BRY-Kk-94b" secondAttribute="centerX" identifier="calendar" id="G2h-zG-Xko"/>
                             <constraint firstAttribute="trailing" secondItem="kql-Mz-luG" secondAttribute="centerX" multiplier="14:3" id="Gx0-dA-D3C"/>
                             <constraint firstAttribute="trailing" secondItem="Nk2-aM-7xm" secondAttribute="centerX" multiplier="14:7" id="MZg-Lc-QbK"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="kql-Mz-luG" secondAttribute="bottom" id="Rm8-2e-haO"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="Nk2-aM-7xm" secondAttribute="bottom" id="SFf-oJ-6wX"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="kql-Mz-luG" secondAttribute="bottom" constant="10" id="Rm8-2e-haO"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="Nk2-aM-7xm" secondAttribute="bottom" constant="10" id="SFf-oJ-6wX"/>
                             <constraint firstAttribute="trailing" secondItem="1QZ-hP-w3l" secondAttribute="centerX" multiplier="14:13" id="SOH-4a-XPn"/>
                             <constraint firstAttribute="trailing" secondItem="O8L-6W-ROD" secondAttribute="centerX" multiplier="14:9" id="SSk-ZG-inR"/>
                             <constraint firstAttribute="trailing" secondItem="ooq-gN-fTf" secondAttribute="centerX" multiplier="14:5" id="ZSG-TU-Fj0"/>
                             <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="fZU-Sr-zJ4" secondAttribute="bottom" constant="30" id="eMc-zw-Y0g"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="O8L-6W-ROD" secondAttribute="bottom" id="fNT-eq-pkJ"/>
-                            <constraint firstItem="nBQ-JA-8us" firstAttribute="top" secondItem="aep-g5-xL8" secondAttribute="bottom" constant="5" id="lf2-Dp-HEc"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="lp9-ps-iE1" secondAttribute="bottom" id="yPg-3b-AIt"/>
-                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="sKT-Hg-rA6" secondAttribute="bottom" id="zQU-kn-Sab"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="O8L-6W-ROD" secondAttribute="bottom" constant="10" id="fNT-eq-pkJ"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="lp9-ps-iE1" secondAttribute="bottom" constant="10" id="yPg-3b-AIt"/>
+                            <constraint firstItem="aep-g5-xL8" firstAttribute="top" secondItem="sKT-Hg-rA6" secondAttribute="bottom" constant="10" id="zQU-kn-Sab"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="RwX-sH-I4e">
-                        <barButtonItem key="leftBarButtonItem" image="arrow-left" id="axh-Ob-3mb">
-                            <connections>
-                                <action selector="prevMonth:" destination="DML-yC-EYD" id="2PT-WI-6cW"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="arrow-right" id="xWs-5j-RVg">
-                            <connections>
-                                <action selector="nextMonth:" destination="DML-yC-EYD" id="ijR-xI-pSZ"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="RwX-sH-I4e"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="500" height="500"/>
                     <connections>
@@ -672,8 +644,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow-left" width="25" height="25"/>
-        <image name="arrow-right" width="25" height="25"/>
         <image name="daily" width="30" height="30"/>
         <image name="library" width="30" height="30"/>
     </resources>
